LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Master__c/WCGT_Master__c.object-meta.xml
<CustomObject>
    <label>WCGT Master</label>
    <nameField>
        <displayFormat>WCGT-{0000}</displayFormat>
        <label>WCGT Master Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WCGT Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>