LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Master__c/fields/Para_Desc__c.field-meta.xml
<CustomField>
    <fullName>Para_Desc__c</fullName>
    <label>Para Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>