LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Master__c/fields/Para_Desc_Max__c.field-meta.xml
<CustomField>
    <fullName>Para_Desc_Max__c</fullName>
    <label>Para Desc Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>