LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Master__c/fields/Para_Desc_Min__c.field-meta.xml
<CustomField>
    <fullName>Para_Desc_Min__c</fullName>
    <label>Para Desc Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>