LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Master__c/fields/Sector_Id__c.field-meta.xml
<CustomField>
    <fullName>Sector_Id__c</fullName>
    <label>Sector Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>