LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Master__c/fields/Sector_Leader__c.field-meta.xml
<CustomField>
    <fullName>Sector_Leader__c</fullName>
    <label>Sector Leader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>