LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Master__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>WCGT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Type</fullName>
            </value>
            <value>
                <fullName>Entity Type</fullName>
            </value>
            <value>
                <fullName>Tot Revenue</fullName>
            </value>
            <value>
                <fullName>Tot Emp No</fullName>
            </value>
            <value>
                <fullName>Rel Office</fullName>
            </value>
            <value>
                <fullName>Country HQ</fullName>
            </value>
            <value>
                <fullName>Sector</fullName>
            </value>
            <value>
                <fullName>Sub-Sector</fullName>
            </value>
            <value>
                <fullName>Category CX GX</fullName>
            </value>
            <value>
                <fullName>CountryId</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Sub Industry</fullName>
            </value>
            <value>
                <fullName>StateId</fullName>
            </value>
            <value>
                <fullName>Corridor</fullName>
            </value>
            <value>
                <fullName>Country Corridor</fullName>
            </value>
            <value>
                <fullName>Enquiry Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>