LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WCGT_Id__c</columns>
    <columns>Para_Desc__c</columns>
    <columns>Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Entity Type</value>
    </filters>
    <label>All</label>
</ListView>