LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Master__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Para_Desc__c</columns>
    <columns>Sector_Id__c</columns>
    <columns>Sector_Leader__c</columns>
    <columns>WCGT_Id__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>Sub Industry</value>
    </filters>
    <label>All</label>
</ListView>