LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Master__c/listViews/WCGT.listView-meta.xml
<ListView>
    <fullName>WCGT</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>WCGT_Id__c</columns>
    <columns>Para_Desc__c</columns>
    <columns>Para_Desc_Min__c</columns>
    <columns>Para_Desc_Max__c</columns>
    <columns>Sector_Leader__c</columns>
    <columns>Sector_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Para_Desc__c</field>
        <operation>contains</operation>
        <value>Manufacturing</value>
    </filters>
    <label>WCGT</label>
</ListView>